--- a/src/main/resources/db/hsqldb.properties
+++ b/src/main/resources/db/hsqldb.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.7.2
-#Fri Jun 14 20:54:58 MSK 2024
-modified=yes
-tx_timestamp=1157
+#Fri Jun 14 21:25:24 MSK 2024
+modified=no
+tx_timestamp=1205
 version=2.7.2
